@startuml

class network_config << (S,#FF7700) singleton >>
together {
interface network_interface
class network_bnu_base
class network_vexcl
}
class network_bnu_ref
class network_bnu_fast
class network_manager
class network_file_handler
class network_sample
class iterative_trainer
class samples_manager

network_bnu_base ..|> network_interface
network_vexcl ..|> network_interface
network_bnu_ref ..|> network_bnu_base
network_bnu_fast ..|> network_bnu_base
network_manager "1" *-- "1" network_interface
network_manager "1" *-- "1" network_file_handler
network_bnu_base --> network_config
network_vexcl --> network_config
network_manager --> network_sample
iterative_trainer --> network_manager
iterative_trainer --> network_sample 
samples_manager --> network_sample

@enduml
